tests/prop_typos/prop_typos.exp
Error ------------------------------------------------------------------------------------------------------ test.js:2:3

Cannot get `x.asd` because property `asd` (did you mean `asdf`?) is missing in object literal [1]. [prop-missing]

   test.js:2:3
   2| x.asd;
        ^^^

References:
   test.js:1:9
   1| let x = {asdf : 3};
              ^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ test.js:3:3

Cannot get `x.asdfo` because property `asdfo` (did you mean `asdf`?) is missing in object literal [1]. [prop-missing]

   test.js:3:3
   3| x.asdfo;
        ^^^^^

References:
   test.js:1:9
   1| let x = {asdf : 3};
              ^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ test.js:4:3

Cannot get `x.bsdf` because property `bsdf` (did you mean `asdf`?) is missing in object literal [1]. [prop-missing]

   test.js:4:3
   4| x.bsdf;
        ^^^^

References:
   test.js:1:9
   1| let x = {asdf : 3};
              ^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ test.js:5:3

Cannot assign `3` to `x.asd` because property `asd` (did you mean `asdf`?) is missing in object literal [1].
[prop-missing]

   test.js:5:3
   5| x.asd = 3;
        ^^^

References:
   test.js:1:9
   1| let x = {asdf : 3};
              ^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ test.js:8:3

Cannot get `y.aaab` because property `aaab` (did you mean `aaaa`?) is missing in object literal [1]. [prop-missing]

   test.js:8:3
   8| y.aaab;
        ^^^^

References:
   test.js:7:9
   7| let y = {aaaa : 3, bbaa : 3};
              ^^^^^^^^^^^^^^^^^^^^ [1]


Error ------------------------------------------------------------------------------------------------------ test.js:9:3

Cannot get `y.bbba` because property `bbba` (did you mean `bbaa`?) is missing in object literal [1]. [prop-missing]

   test.js:9:3
   9| y.bbba;
        ^^^^

References:
   test.js:7:9
   7| let y = {aaaa : 3, bbaa : 3};
              ^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:10:3

Cannot get `y.baaa` because property `baaa` (did you mean `aaaa`?) is missing in object literal [1]. [prop-missing]

   test.js:10:3
   10| y.baaa;
         ^^^^

References:
   test.js:7:9
    7| let y = {aaaa : 3, bbaa : 3};
               ^^^^^^^^^^^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:32:3

Cannot get `a.fooo` because property `fooo` (did you mean `foo`?) is missing in `A` [1]. [prop-missing]

   test.js:32:3
   32| a.fooo;
         ^^^^

References:
   test.js:28:9
   28| let a = new A;
               ^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:33:3

Cannot get `a.barr` because property `barr` is missing in `A` [1]. [prop-missing]

   test.js:33:3
   33| a.barr; // should have no suggestion
         ^^^^

References:
   test.js:28:9
   28| let a = new A;
               ^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:34:3

Cannot call `a.funk` because property `funk` (did you mean `func`?) is missing in `A` [1]. [prop-missing]

   test.js:34:3
   34| a.funk();
         ^^^^

References:
   test.js:28:9
   28| let a = new A;
               ^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:35:3

Cannot get `A.s11111` because property `s11111` (did you mean `s1111`?) is missing in statics of `A` [1]. [prop-missing]

   test.js:35:3
   35| A.s11111;
         ^^^^^^

References:
   test.js:12:7
   12| class A {
             ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:36:3

Cannot get `A.s22222` because property `s22222` is missing in statics of `A` [1]. [prop-missing]

   test.js:36:3
   36| A.s22222; // should have no suggestion
         ^^^^^^

References:
   test.js:12:7
   12| class A {
             ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:38:3

Cannot get `b.fooo` because property `fooo` (did you mean `foo`?) is missing in `B` [1]. [prop-missing]

   test.js:38:3
   38| b.fooo;
         ^^^^

References:
   test.js:29:9
   29| let b = new B;
               ^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:39:3

Cannot get `b.barr` because property `barr` (did you mean `bar`?) is missing in `B` [1]. [prop-missing]

   test.js:39:3
   39| b.barr;
         ^^^^

References:
   test.js:29:9
   29| let b = new B;
               ^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:40:3

Cannot call `b.funk` because property `funk` (did you mean `func`?) is missing in `B` [1]. [prop-missing]

   test.js:40:3
   40| b.funk();
         ^^^^

References:
   test.js:29:9
   29| let b = new B;
               ^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:41:3

Cannot get `B.s11111` because property `s11111` (did you mean `s1111`?) is missing in statics of `B` [1]. [prop-missing]

   test.js:41:3
   41| B.s11111;
         ^^^^^^

References:
   test.js:18:7
   18| class B extends A {
             ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:42:3

Cannot get `B.s22222` because property `s22222` (did you mean `s2222`?) is missing in statics of `B` [1]. [prop-missing]

   test.js:42:3
   42| B.s22222;
         ^^^^^^

References:
   test.js:18:7
   18| class B extends A {
             ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:44:3

Cannot get `c.fooo` because property `fooo` (did you mean `foo`?) is missing in `C` [1]. [prop-missing]

   test.js:44:3
   44| c.fooo;
         ^^^^

References:
   test.js:30:9
   30| let c = new C;
               ^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:45:3

Cannot get `c.barr` because property `barr` (did you mean `bar`?) is missing in `C` [1]. [prop-missing]

   test.js:45:3
   45| c.barr;
         ^^^^

References:
   test.js:30:9
   30| let c = new C;
               ^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:46:3

Cannot get `c.bazz` because property `bazz` (did you mean `baz`?) is missing in `C` [1]. [prop-missing]

   test.js:46:3
   46| c.bazz;
         ^^^^

References:
   test.js:30:9
   30| let c = new C;
               ^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:47:3

Cannot call `c.funk` because property `funk` (did you mean `func`?) is missing in `C` [1]. [prop-missing]

   test.js:47:3
   47| c.funk();
         ^^^^

References:
   test.js:30:9
   30| let c = new C;
               ^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:48:3

Cannot get `C.s11111` because property `s11111` (did you mean `s1111`?) is missing in statics of `C` [1]. [prop-missing]

   test.js:48:3
   48| C.s11111;
         ^^^^^^

References:
   test.js:23:7
   23| class C extends B {
             ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:49:3

Cannot get `C.s22222` because property `s22222` (did you mean `s2222`?) is missing in statics of `C` [1]. [prop-missing]

   test.js:49:3
   49| C.s22222;
         ^^^^^^

References:
   test.js:23:7
   23| class C extends B {
             ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:50:3

Cannot get `C.s33333` because property `s33333` (did you mean `s3333`?) is missing in statics of `C` [1]. [prop-missing]

   test.js:50:3
   50| C.s33333;
         ^^^^^^

References:
   test.js:23:7
   23| class C extends B {
             ^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:53:7

Cannot get `x.asd` because property `asd` (did you mean `asdf`?) is missing in object literal [1]. [prop-missing]

   test.js:53:7
   53| if (x.asd) {} // Error with suggestion
             ^^^

References:
   test.js:1:9
    1| let x = {asdf : 3};
               ^^^^^^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:54:7

Cannot get `b.fooo` because property `fooo` (did you mean `foo`?) is missing in `B` [1]. [prop-missing]

   test.js:54:7
   54| if (b.fooo) {} // Error with suggestion
             ^^^^

References:
   test.js:29:9
   29| let b = new B;
               ^^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:55:7

Cannot get `C.s333` because property `s333` (did you mean `s3333`?) is missing in statics of `C` [1]. [prop-missing]

   test.js:55:7
   55| if (C.s333) {} // Error with suggestion
             ^^^^

References:
   test.js:23:7
   23| class C extends B {
             ^ [1]



Found 27 errors
